[gd_scene load_steps=5 format=2]

[ext_resource path="res://ScoreIncreaseMessage.gd" type="Script" id=1]
[ext_resource path="res://assets/slapface.tres" type="DynamicFont" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Bump"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.176777, 1, 9.18957 ),
"update": 0,
"values": [ -10.0, -20, -10.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Cash"
length = 0.25
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.298039, 0.623529, 0.92549, 1 ), Color( 0.223529, 0.878431, 0.956863, 1 ) ]
}

[node name="ScoreIncreaseMessage" type="Node2D"]
z_index = 10
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.298039, 0.623529, 0.92549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "+3 x 15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../ScoreLabel")
anims/Bump = SubResource( 1 )
anims/Cash = SubResource( 2 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
